--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,12 @@
 			src="https://kit.fontawesome.com/1449b0787b.js"
 			crossorigin="anonymous"
 		></script>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=MedievalSharp&family=Roboto&display=swap"
+			rel="stylesheet"
+		/>
 		<title>Bestiary</title>
 	</head>
 	<body>
